--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+blist==1.3.6
 cassandra-driver==2.5.1
+cql==1.4.0
 Flask==0.10.1
 futures==3.0.1
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
 six==1.9.0
+thrift==0.9.2
 Werkzeug==0.10.4
