--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ todo.md
 #ignore OSX ds_store
 .DS_STORE
 
+#ignore data files
+*.csv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
